# SimpleMatrixLibrary

./: .gitignore  BuildScript.bat  CMakeLists.txt  ReadMe.md  RunScript.bat  main.cpp
matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp
tests/: CMakeLists.txt
tests/matrix_tests/: CMakeLists.txt  main.cpp  test_matrix.cpp
